syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

// protoc-gen-go version is greater than 1.4.0, proto file needs to add go_package, otherwise it can't be generated
option go_package = "./user";

message IdRequest {
    string id = 1;
}
  
message UserResponse {
    // user id
    string id = 1;
    // user name
    string name = 2;
    // user gender
    string gender = 3;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
    string gender = 5;
    google.protobuf.Timestamp dob = 6;
}

message RegisterResponse {
    string id = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
    string gender = 5;
    google.protobuf.Timestamp dob = 6;
}

message UpdateRequest {
    string id = 1;
    optional string first_name = 2;
    optional string last_name = 3;
    optional string gender = 4;
    optional google.protobuf.Timestamp dob = 5;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse{
    string access_token = 1;
    string refresh_token = 2;
}

message RefreshRequest {
    string refresh_token = 1;
}

message VerifyTokenRequest {
    string access_token = 1;
}

message VerifyTokenResponse {
    string id = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
    string gender = 5;
    google.protobuf.Timestamp dob = 6;
    repeated string scopes = 7;
}

  
service User {
    rpc getUser(IdRequest) returns(RegisterResponse);
    rpc registerUser(RegisterRequest) returns(RegisterResponse);
    rpc updateUser(UpdateRequest) returns(RegisterResponse);
    rpc login(LoginRequest) returns(LoginResponse);
    rpc refresh(RefreshRequest) returns(LoginResponse);
    rpc verifyToken(VerifyTokenRequest) returns(VerifyTokenResponse);
}